[gd_scene load_steps=2 format=3 uid="uid://c34ahm51fr7mw"]

[ext_resource type="Script" uid="uid://b42lfmi1nmj05" path="res://Example_Scenes/UI/InventoryTemplateDemo.gd" id="1"]

[node name="InventoryTemplateDemo" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.078431, 0.086274, 0.105882, 1)

[node name="Content" type="MarginContainer" parent="."]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Layout" type="VBoxContainer" parent="Content"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Title" type="Label" parent="Content/Layout"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "InventoryTemplate Demo"

[node name="Description" type="Label" parent="Content/Layout"]
layout_mode = 2
size_flags_horizontal = 3
text = "InventoryTemplate is instanced and populated with sample items."

[node name="ButtonContainer" type="HBoxContainer" parent="Content/Layout"]
layout_mode = 2
size_flags_horizontal = 3

[node name="RefreshButton" type="Button" parent="Content/Layout/ButtonContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "Refresh Inventory"

[node name="ToggleButton" type="Button" parent="Content/Layout/ButtonContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "Hide Inventory"

[node name="TemplateHost" type="CenterContainer" parent="Content/Layout"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 400)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="EventLogLabel" type="Label" parent="Content/Layout"]
layout_mode = 2
size_flags_horizontal = 3
text = "Inventory Events"

[node name="EventLog" type="RichTextLabel" parent="Content/Layout"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
scroll_following = true
